Try to fix scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Unna&display=swap');
 
+html, body {
+  height: 100%;
+  overflow: hidden
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
